Fix spacing for horizontal separator

--- a/editor-style.css
+++ b/editor-style.css
@@ -46,7 +46,7 @@ body.gutenberg-editor-page .editor-block-list__block[data-align="full"] {
     line-height: 1.65; }
 
 /* Adjustment to editing blocks to match positioning in front-end */
-.editor-block-list__layout .editor-block-list__block .editor-block-list__block-edit, .editor-block-list__layout .editor-block-list__layout .editor-block-list__block .editor-block-list__block-edit, .editor-block-list__layout .editor-block-list__layout .editor-default-block-appender .editor-default-block-appender__content, .editor-block-list__layout .editor-default-block-appender__content {
+.editor-block-list__layout .editor-block-list__block .editor-block-list__block-edit, .editor-block-list__layout .editor-block-list__layout .editor-block-list__block .editor-block-list__block-edit, .editor-block-list__layout .editor-block-list__layout .editor-default-block-appender .editor-default-block-appender__content, .editor-block-list__layout .editor-default-block-appender__content, .editor-block-list__block-edit .wp-block-separator {
   margin-top: 18px;
   margin-bottom: 18px; }
 
